--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -2467,10 +2467,11 @@ progress::-webkit-progress-value {
 .select2-container .select2-selection--single {
   border: 1px solid #cccccc;
   border-radius: 3px;
-  height: 34px;
   display: inline-block;
-  padding: 1px;
   background: #ffffff;
+  width: 300px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .select2-container {
   display: inline !important;
