changed select2 css

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -2472,6 +2472,7 @@ progress::-webkit-progress-value {
   width: 278px;
   overflow: hidden;
   height: 34px;
+  min-height: 34px;
   text-overflow: ellipsis;
 }
 .select2-container {
